[Fix] #76701 made sure workstationedit.js is always loaded and initialized on Workstation/Edit (did only work if computer field setting "Document" was set to show)
#76191 Fixed several issues with log files and usage of handler instead of virtual path

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Edit.cshtml
@@ -113,6 +113,19 @@
 
 @section Scripts
 {
+    @Scripts.Render(BundleConfig.ScriptNames.InventoryWorkstation)
+    <script type="text/javascript">
+        $(function(jQuery) {
+            window.workstationEdit = new WorkstationEdit($);
+            window.workstationEdit.init({
+                userId: @SessionFacade.CurrentUser.Id,
+                customerId: @SessionFacade.CurrentCustomer.Id,
+                getUnitsUrl: '@Url.Action("GetUnits", "Ajax", new {area = ""})',
+                getDepartmentsUrl: '@Url.Action("GetDepartments", "Ajax", new {area = ""})'
+            });
+        });
+    </script>
+
     @if (documentModel.Show)
     {
         @Html.Partial("_InventoryFiles")
@@ -133,14 +146,6 @@
                 // create instance and init
                 window.inventoryFiles = new InventoryFiles(jQuery);
                 window.inventoryFiles.init(inventoryFilesOptions);
-
-                window.workstationEdit = new WorkstationEdit($);
-                window.workstationEdit.init({
-                    userId: @SessionFacade.CurrentUser.Id,
-                    customerId: @SessionFacade.CurrentCustomer.Id,
-                    getUnitsUrl: '@Url.Action("GetUnits", "Ajax", new {area = ""})',
-                    getDepartmentsUrl: '@Url.Action("GetDepartments", "Ajax", new {area = ""})'
-                });
             });
 
         </script>
