--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_LogNoteFiles.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_LogNoteFiles.cshtml
@@ -44,17 +44,33 @@
             <p>
                 @if (l.CaseId.HasValue)
                 {
+                    if (Model.CaseFiles.VirtualDirectory)
+                    {
                     <a target="_blank" class="isExisted" 
                        onclick="window.dhHelpdesk.logFileAccess(@l.CaseId, '@l.FileName', @((int)CaseFileType.CaseFile))" 
                        href="@BuildCaseFileLinkVD(l.FileName)"><i class="icon- attachedFile"></i>@l.FileName</a>
+                    }
+                    else
+                    {
+                         <a target="_blank" class="isExisted" 
+                       href="@Url.Action("DownloadFile", new { id = l.CaseId, fileName = l.FileName })"><i class="icon- attachedFile"></i>@l.FileName</a>
+                    }
                 }
                 else
                 {
                     if (l.LogId.HasValue)
                     {
+                        if (Model.CaseFiles.VirtualDirectory)
+                        {
                         <a target="_blank" class="isExisted"
                            onclick="window.dhHelpdesk.logFileAccess(@currentLog.CaseId, '@l.FileName', @(l.LogType == LogFileType.Internal ? (int)CaseFileType.LogInternal : (int)CaseFileType.LogExternal), @l.LogId.Value)"
                            href="@BuildLogFileLinkVD(l.LogId.Value, l.FileName, l.ParentLogType ?? l.LogType)"><i class="icon- attachedFile"></i> @l.FileName</a>
+                        }
+                        else
+                        {
+                            <a target="_blank" class="isExisted"
+                               href="@Url.Action("DownloadLogFile", new { id = currentLog.Id, fileName = l.FileName, logType = (int)l.LogType })"><i class="icon- attachedFile"></i>@l.FileName</a>
+                        }
                     }
                     else
                     {
