--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogFiles.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogFiles.cshtml
@@ -60,17 +60,33 @@
                             <input type="hidden" id="logfile_id" value="@fileModel.Id" />
                             @if (fileModel.IsExistCaseFile && fileModel.ObjId.HasValue)
                             {
+                                if (Model.UseVirtualDirectory)
+                                {
                                 <a target="_blank" class="@(GuidHelper.IsGuid(Model.LogId) ? "isExisted" : "")" 
                                    onclick="window.dhHelpdesk.logFileAccess(@Model.CaseId, '@fileModel.Name', @((int)CaseFileType.CaseFile))" 
                                    href="@BuildCaseFileLinkVD(fileModel.Name)"><i class="icon- attachedFile"></i>@fileModel.Name</a>
+                                }
+                                else
+                                {
+                                    <a target="_blank" class="@(GuidHelper.IsGuid(Model.LogId) ? "isExisted" : "")"
+                                       href="@Url.Action("DownloadFile", new RouteValueDictionary { { "id", Model.CaseId }, { "fileName", fileModel.Name } })"><i class="icon- attachedFile"></i>@fileModel.Name</a>
+                                }
                             }
                             else
                             {
                                 if (fileModel.IsExistLogFile && fileModel.ObjId.HasValue)
                                 {
+                                    if (Model.UseVirtualDirectory)
+                                    {
                                     <a target="_blank" class="@(GuidHelper.IsGuid(Model.LogId) ? "isExisted" : "")"
                                        onclick="window.dhHelpdesk.logFileAccess(@Model.CaseId, '@fileModel.Name', @(fileModel.LogType == LogFileType.Internal ? (int)CaseFileType.LogInternal : (int)CaseFileType.LogExternal), @fileModel.ObjId.Value)"
                                        href="@BuildLogFileLinkVD(fileModel.ObjId.Value, fileModel.Name, fileModel.ParentLogType ?? fileModel.LogType)"><i class="icon- attachedFile"></i> @fileModel.Name</a>
+                                    }
+                                    else
+                                    {
+                                               <a target="_blank" class="@(GuidHelper.IsGuid(Model.LogId) ? "isExisted" : "")"
+                                       href="@Url.Action("DownloadLogFile", new RouteValueDictionary {{"id", fileModel.ObjId.Value}, {"fileName", fileModel.Name}, {"logType", (int)(fileModel.ParentLogType ?? fileModel.LogType)} })"><i class="icon- attachedFile"></i> @fileModel.Name</a>
+                                    }
                                 }
                                 else
                                 {
