--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseHistory.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseHistory.cshtml
@@ -44,10 +44,21 @@
                         <td style="width:25%">
                             @if (current.Emaillogs != null) 
                             {
+
                                 <div>
                                     @foreach (var l in current.Emaillogs)
                                     {    
-                                        <p>@l.EmailAddress (@l.MailId.GetMailTemplateName(Model.MailTemplates))</p>
+                                        List<string> emails;
+                                        {
+                                            emails = l.EmailAddress.Split(',').ToList();
+                                            if (l.CcEmailAddress.Any())
+                                            {
+                                                emails.AddRange(l.CcEmailAddress.Split(','));
+                                            }
+                                        }
+                                        foreach (var e in emails.OrderBy(e => e)) {
+                                            <p>@e (@l.MailId.GetMailTemplateName(Model.MailTemplates))</p>
+                                         }
                                     }
                                 </div>
                             }
