#76592 - Improvements Widget Statistics

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -4154,3 +4154,46 @@ div.chosen-container.chosen-container-single.error .chosen-single {
     overflow-y: auto;
     max-height: 60vh;
 }
+
+#statisticsData table {
+    width: 100%;
+    font-weight: bolder;
+}
+
+#statisticsData table tr:nth-child(odd) td {
+    text-align: center;
+    font-size: smaller;
+}
+
+#statisticsData table tr td:nth-child(1) {
+    color: #438eb9;
+}
+
+#statisticsData table tr td:nth-child(2) {
+    color: #d96326;
+}
+
+#statisticsData table tr:nth-child(1) td:nth-child(3),
+#statisticsData table tr:nth-child(2) td:nth-child(3) {
+    color: #999;
+}
+
+#statisticsData table tr:nth-child(1) td:nth-child(4),
+#statisticsData table tr:nth-child(2) td:nth-child(4) {
+    color: red;
+}
+
+#statisticsData table tr:nth-child(even) td {
+    text-align: center;
+    font-size: larger;
+}
+
+#statisticsData table tr:nth-child(3) td:nth-child(3),
+#statisticsData table tr:nth-child(4) td:nth-child(3) {
+    color: #2e8965;
+}
+
+#statisticsData table tr:nth-child(3) td:nth-child(4),
+#statisticsData table tr:nth-child(4) td:nth-child(4) {
+    color: #999;
+}
