#76592 - Improvements Widget Statistics- minor fix

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Home/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Home/Index.cshtml
@@ -242,10 +242,12 @@
         dhHelpdesk.statistics.init({
             dataUrl: '@Url.Action("GetStatistics", "Home")'
         });
-        dhHelpdesk.statistics.loadStatistics();
+        var statXhr = dhHelpdesk.statistics.loadStatistics();
 
-        $(function() {
-            dhHelpdesk.statistics.tryApplyData();
+        $(function () {
+            statXhr.done(function() {
+                dhHelpdesk.statistics.tryApplyData();
+            });
         });
     </script>
 }
