#76673 - Remove FileAccessLog with GDPR

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/DataPrivacy.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/DataPrivacy.cshtml
@@ -119,6 +119,13 @@
                     </tr>
                     <tr>
                         <td class="span3">
+                        </td>
+                        <td class="span9">
+                            @Html.CheckBoxFor(m => m.RemoveFileViewLogs) @Translation.GetCoreTextTranslation("Ta bort filåtkomstloggen")
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="span3">
                             @Translation.GetCoreTextTranslation("Spara/uppdatera")
                         </td>
                         <td class="span9">
