--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/StatisticsInfo.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/StatisticsInfo.cshtml
@@ -17,8 +17,8 @@
                     </div>
                     <div id="statisticsData" style="display: none">
                         <table class="table-condensed">
-                            <tr>
-                                <td>@Translation.Get("Pågående ärende")</td>
+                            <tr sty>
+                                <td>@Translation.Get("Pågående")</td>
                                 <td>@Translation.Get("Oöppnad")</td>
                                 <td>@Translation.Get("Vilande")</td>
                                 <td>@Translation.Get("Försenad")</td>
