#52742 - Change default value for widgets to show all

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/EditorTemplates/UserModuleOverview.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/EditorTemplates/UserModuleOverview.cshtml
@@ -37,7 +37,7 @@
         list.Add(new SelectListItem()
         {
             Value = string.Empty,
-            Text = Translation.Get("Alla", Enums.TranslationSource.TextTranslation),
+            Text = Translation.Get("Alla"),
             Selected = !Model.NumberOfRows.HasValue
         });        
         return list;
