--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseValidation.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseValidation.cshtml
@@ -324,6 +324,9 @@
             },
             "CaseLog.TextExternal": {
                 maxlength: 3000,
+                required: function() {
+                    return $('#divCaseLogFiles.externalLog-files tr').length > 0;
+                },
                 @if (Model.CustomerSettings.ModuleInvoice)
                     {
                         <text>
@@ -567,8 +570,9 @@
             require_from_group: "@Translation.GetForJS("Något av följande fält måste fyllas i")"
             },
             "CaseLog.TextExternal": {
-            maxlength: "@Translation.GetForJS("Ange inte mer än 3000 tecken", Enums.TranslationSource.TextTranslation)",
-            require_from_group: "@Translation.GetForJS("Något av följande fält måste fyllas i")"
+                maxlength: "@Translation.GetForJS("Ange inte mer än 3000 tecken", Enums.TranslationSource.TextTranslation)",
+                required: "@Translation.GetForJS(GlobalEnums.TranslationCaseFields.tblLog_Text_External.ToString(), Enums.TranslationSource.CaseTranslation, Model.case_.Customer_Id) @Translation.Get("måste anges")",
+                require_from_group: "@Translation.GetForJS("Något av följande fält måste fyllas i")"
             },
             "CaseLog.WorkingTimeHour": { require_from_group: "@Translation.GetForJS("Välj en eller flera")" },
             "CaseLog.WorkingTimeMinute": { require_from_group: "@Translation.GetForJS("Välj en eller flera")" },
