--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/AdvancedSearch/_SearchOverview.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/AdvancedSearch/_SearchOverview.cshtml
@@ -132,7 +132,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td class="span3">@Translation.GetCoreTextTranslation("Bifogad fil")</td>
+                        <td class="span3">@Translation.GetCoreTextTranslation("Filinnehåll")</td>
                         <td class="span4">
                             <div>
                                 @Html.CheckBoxFor(m => Model.CaseSearchFilterData.caseSearchFilter.SearchThruFiles, new { id = "chkSearchThruFiles", @class = "switchcheckbox", disabled="true" })
