[Fix] #76640 check when returned to overview
#76748 fixed on new and edit

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/InventorySettings/EditorTemplates/InventoryTypeModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/InventorySettings/EditorTemplates/InventoryTypeModel.cshtml
@@ -9,7 +9,7 @@
                     <td>@Translation.Get("Inventarietyp")
                     </td>
                     <td>
-                        @Html.EditorFor(x => x.Name)
+                        @Html.EditorFor(x => x.Name, new { maxlength = 50 })
                     </td>
                 </tr>
             </table>
