--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/ComputerType/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/ComputerType/_Input.cshtml
@@ -7,7 +7,7 @@
             <label>@Translation.Get("Datortyp")</label>
         </td>
         <td class="span9">
-            @Html.EditorFor(m => m.Name)
+            @Html.EditorFor(m => m.Name, new { maxlength = 60 })
             @Html.ValidationMessageFor(m => m.Name)
         </td>
     </tr>
