#76592 - Improvements Widget Statistics - updated loader behavior

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/StatisticsInfo.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/StatisticsInfo.cshtml
@@ -12,10 +12,7 @@
             </div>
             <div class="box-body portlet-content">
                 <div class="box-post">
-                    <div id="statisticsLoader" style="width: 100%; text-align: center">
-                        <i class="gif-loader" style="">&nbsp;</i>
-                    </div>
-                    <div id="statisticsData" style="display: none">
+                    <div id="statisticsData">
                         <table class="table-condensed">
                             <tr sty>
                                 <td>@Translation.Get("Pågående")</td>
@@ -24,10 +21,10 @@
                                 <td>@Translation.Get("Försenad")</td>
                             </tr>
                             <tr>
-                                <td id="st_inProgress">11</td>
-                                <td id="st_unopend">22</td>
-                                <td id="st_onhold">33</td>
-                                <td id="st_delayed">4444</td>
+                                <td id="st_inProgress"><i class="gif-loader" style="">&nbsp;</i></td>
+                                <td id="st_unopend"><i class="gif-loader" style="">&nbsp;</i></td>
+                                <td id="st_onhold"><i class="gif-loader" style="">&nbsp;</i></td>
+                                <td id="st_delayed"><i class="gif-loader" style="">&nbsp;</i></td>
                             </tr>
                             <tr>
                                 <td>@Translation.Get("Nya idag")</td>
@@ -36,10 +33,10 @@
                                 <td>@Translation.Get("Löst i tid idag")</td>
                             </tr>
                             <tr>
-                                <td id="st_newToday">11</td>
-                                <td id="st_delayedToday">222</td>
-                                <td id="st_solved">33</td>
-                                <td><span id="st_solvedInTime"></span>%</td>
+                                <td id="st_newToday"><i class="gif-loader" style="">&nbsp;</i></td>
+                                <td id="st_delayedToday"><i class="gif-loader" style="">&nbsp;</i></td>
+                                <td id="st_solved"><i class="gif-loader" style="">&nbsp;</i></td>
+                                <td><span id="st_solvedInTime"><i class="gif-loader" style="">&nbsp;</i></span>%</td>
                             </tr>
                         </table>
                     </div>
