--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/MailTemplate/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/MailTemplate/Edit.cshtml
@@ -15,12 +15,11 @@
     <div class="secnavs fixed">
         <div class="pull-left">
             <ul class="secnav">
-                <li>@Html.ActionLink(Translation.Get("Spara", Enums.TranslationSource.TextTranslation), "edit", new { }, new { onclick = "$('#target').submit();return false;", @class = "btn" })</li>
+                <li>@Html.ActionLink(Translation.Get("Spara"), "edit", new { }, new { onclick = "$('#target').submit();return false;", @class = "btn" })</li>
                 @if (!(Model.IsStandardTemplate))
                 {
                     <li>@Html.ActionLink(
-                                     Translation.Get(("Ta bort"),
-                                                     Enums.TranslationSource.TextTranslation), "delete",
+                                     Translation.Get(("Ta bort")), "delete",
                                                     new
                                                     {
                                                         id = Model.MailTemplateLanguage.MailTemplate.Id,
@@ -30,8 +29,7 @@
                                      new
                                      {
                                          @class = "btn deleteDialog",
-                                         deleteDialogText = Translation.Get(("Är du säker på att du vill ta bort denna mall"),
-                                                                            Enums.TranslationSource.TextTranslation) + "?"
+                                         deleteDialogText = Translation.Get(("Är du säker på att du vill ta bort denna mall")) + "?"
                                        ,
                                          buttonTypes = "YesNo",
                                          id = "DelBtn"
@@ -40,7 +38,7 @@
                 }
 
 
-                <li>@Html.ActionLink(Translation.Get("Avbryt", Enums.TranslationSource.TextTranslation), "index", new { customerId = Model.Customer.Id }, new { @class = "btn" })</li>
+                <li>@Html.ActionLink(Translation.Get("Avbryt"), "index", new { customerId = Model.Customer.Id }, new { @class = "btn" })</li>
             </ul>
         </div>
     </div>
